k8s/backend-ingress-deployment.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: washu-course-scheduler-backend-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - pathType: ImplementationSpecific
            path: /backend(/|$)(.*)
            backend:
              service:
                name: backend-service
                port:
                  number: 8000
