k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  labels:
    app: backend
spec:
  selector:
    matchLabels:
      app: backend
  replicas: 1
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - image: washu_course_scheduler_backend:release
          imagePullPolicy: IfNotPresent
          name: backend
          command: ["poetry", "run", "python", "manage.py", "runserver", "0.0.0.0:8000"]
          ports:
            - containerPort: 8000
---

apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  type: LoadBalancer
  selector:
    app: backend
  ports:
    - port: 8000
      targetPort: 8000

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: washu_course_scheduler_frontend:release
        command: ["nginx", "-g", "daemon off;"]
        ports:
          - containerPort: 5173
---

apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  type: LoadBalancer
  selector:
    app: frontend
  ports:
    - port: 5173
      targetPort: 5173

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: washu-course-scheduler-ingress
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /backend
            backend:
              service:
                name: backend-service
                port:
                  number: 8000
          - pathType: Prefix
            path: /frontend
            backend:
              service:
                name: frontend-service
                port:
                  number: 5173
